[ADD] estilos header y a nav :octocat:

--- a/index.html
+++ b/index.html
@@ -15,14 +15,30 @@
     <!--START header-->
     <div class="container container-nav-bar">
         <div class="row header">
-            <div class="header-container col-12">
-                <div class="header-nav-container">
-                    
+            <div class="header-container col-12 m-lg-0 p-lg-0">
+                <div class="row">
+                    <div class="header-nav-container col-lg-4 col-12 d-flex justify-content-start m-lg-0 p-lg-0">
+                        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Medium_logo_Wordmark_Black.svg/1280px-Medium_logo_Wordmark_Black.svg.png" alt="">
+                        <img class="logo-small" src="https://miro.medium.com/max/390/1*emiGsBgJu2KHWyjluhKXQw.png" alt="">
+                    </div>
+                    <div class="header-nav-button col-lg-6 col-12 d-lg-flex justify-content-lg-end d-flex justify-content-start m-lg-0 p-lg-0">
+                        <form class="form-inline my-2 my-lg-0">
+                            <input class="form-control mr-sm-2 border border-light button-style-header" type="Encuentra en Medium.." placeholder="Encuentra en Medium.." aria-label="Encuentra en Medium..">
+                            <button class="btn btn-outline-dark my-2 my-sm-0 button-style-header" type="submit">Buscar</button>
+                        </form>
+                   </div>
+                    <div class="col-lg-2 col-12 d-lg-flex justify-content-lg-end d-flex justify-content-start m-lg-0 p-lg-0 ">
+                        <form class="form-inline my-2 mx-lg-4 my-lg-0">
+                            <button type="button" id="callNewPostFormBtn" class="btn btn-outline-dark button-style-header" data-toggle="modal" data-target="#newPost">Subir post</button>
+                            <form class="form-inline"></form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <!--END header-->
+
 
     <div class="content-wrapper">
 
@@ -32,43 +48,43 @@
                 <div class="col-12">
                     <ul class="nav row d-flex justify-content-around">
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://onezero.medium.com/" class="nav-link-item text-muted">ONEZERO</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://elemental.medium.com/" class="nav-link-item text-muted">ELEMENTAL</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://gen.medium.com/" class="nav-link-item text-muted">GEN</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://zora.medium.com/" class="nav-link-item text-muted">ZORA</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://forge.medium.com/" class="nav-link-item text-muted">FORGE</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://humanparts.medium.com/" class="nav-link-item text-muted">HUMAN</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://marker.medium.com/" class="nav-link-item text-muted">MARKER</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://medium.com/topic/self" class="nav-link-item text-muted">SELF</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://medium.com/topic/technology" class="nav-link-item text-muted">TECH</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://heated.medium.com/" class="nav-link-item text-muted">HEATED</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://modus.medium.com/" class="nav-link-item text-muted">MODUS</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://medium.com/topics" class="nav-link-item text-muted">MORE</a>
                         </li>
                         <li class="nav-item">
-                            <a href="" class="nav-link-item text-muted">TOPICS</a>
+                            <a href="https://medium.com/topic/startups" class="nav-link-item text-muted">STARTUPS</a>
                         </li>
                     </ul>
                 </div>
@@ -95,10 +111,10 @@
         <!--END principal content-->
 
         <!--START nav see all-->
-        <div class="container container-nav">
-            <div class="row container-button">
-                <div class="btn btn-light-">
-                    <p><a href=""></a>Ver todos</p>
+        <div class="container">
+            <div class="row">
+                <div class="col 12 d-flex justify-content-end my-3">
+                    <p id="button-see-all"><a href="https://medium.com/topic/editors-picks"></a>VER TODOS ></p>
                 </div>
             </div>
         </div>
