[ADD] estilos pagina estatica

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                     </div>
                     <div class="header-nav-button col-lg-6 col-12 d-lg-flex justify-content-lg-end d-flex justify-content-start m-lg-0 p-lg-0">
                         <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2 border border-light button-style-header" type="Encuentra en Medium.." placeholder="Encuentra en Medium.." aria-label="Encuentra en Medium..">
-                            <button class="btn btn-outline-dark my-2 my-sm-0 button-style-header" type="submit">Buscar</button>
+                            <input class="form-control mr-sm-2 border border-light button-style-header" type="Search Medium.." placeholder="Search Medium.." aria-label="Search Medium..">
+                            <button class="btn btn-outline-dark my-2 my-sm-0 button-style-header" type="submit">Search</button>
                         </form>
                    </div>
                     <div class="col-lg-2 col-12 d-lg-flex justify-content-lg-end d-flex justify-content-start m-lg-0 p-lg-0 ">
                         <form class="form-inline my-2 mx-lg-4 my-lg-0">
-                            <button type="button" id="callNewPostFormBtn" class="btn btn-outline-dark button-style-header" data-toggle="modal" data-target="#newPost">Subir post</button>
+                            <button type="button" id="callNewPostFormBtn" class="btn btn-outline-dark button-style-header" data-toggle="modal" data-target="#newPost">Post upload</button>
                             <form class="form-inline"></form>
                         </form>
                     </div>
@@ -40,7 +40,7 @@
     <!--END header-->
 
 
-    <div class="content-wrapper">
+    <div class="content-wrapper m-0 p-0">
 
         <!--START nav topics-->
         <div class="container container-topics d-none d-lg-block">
@@ -95,16 +95,81 @@
         <!--START principal content-->
         <div class="container container-card-group">
             <div class="row card-group-main">
-                <div class="card-main col-12 col-lg-4">
-                    <p>Hola</p>
+                <div class="card-main col-12 col-lg-4 mt-4 m-0 p-0">
+                    <div class="mb-3 card-img-principal"><img src="https://cdn-images-1.medium.com/focal/832/302/49/5/1*0GUrVNtd9-f9NOrhT0AgGA.png" alt="" class="card-img-top"></div>
+                    <div class="card-body-principal ml-lg-5 ml-md-2">
+                        <p class="card-title-principal mt-2">How to Change a Mind</p>
+                        <p class="card-summary-principal">Missy spent more than five years getting her husband to leave a cult, but the breakthrough was simple</p>
+                        <p class="card-autor-principal">Eleanor Gordon-Smith in Forge</p>
+                        <p class="card-create-pricipal">Oct 14 - 11 min read</p>
+                    </div>
                 </div>
-                <div class="card-group-inside col-12 col-lg-4">
-                    <div class="card-inside"></div>
-                    <div class="card-inside"></div>
-                    <div class="card-inside"></div>
+                <div class="card-group-inside col-12 col-lg-5 mt-4">
+                    <div class="card-inside">
+                        <div class="container contaioner-card-group-static">
+                            <div class="row ccard-group-main-static">
+                                <div class="card-main col-12">
+                                    <div class="row card-group-topics">
+                                        <div class="card-img-topics col-4">
+                                            <img class="mw-100" src="https://cdn-images-1.medium.com/focal/200/200/36/44/1*jxlB4nsmVO-f0Hde3BWCNA.jpeg" alt="">
+                                        </div>
+                                        <div class="card-content-topics col-8 ">
+                                            <p class="card-title-topics">Yes, Critical Black Joy Exists at Comic-Con</p>
+                                            <p class="card-autor-topics">Amari Boyd in ZORA</p>
+                                            <p class="card-create-topics">Oct 14 - 7 min read</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="card-inside">
+                        <div class="container contaioner-card-group-static">
+                            <div class="row ccard-group-main-static">
+                                <div class="card-main col-12">
+                                    <div class="row card-group-topics">
+                                        <div class="card-img-topics col-4">
+                                            <img class="mw-100" src="https://cdn-images-1.medium.com/focal/200/200/48/57/1*NfxQcQjiJVqR0O0-FxLn1A.jpeg" alt="">
+                                        </div>
+                                        <div class="card-content-topics col-8 ">
+                                            <p class="card-title-topics">How Immersion Into My Own Food Culture</p>
+                                            <p class="card-autor-topics">Melissa Guida-Richards in Zora</p>
+                                            <p class="card-create-topics">Oct 11 - 15 min read</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    <div class="card-inside">
+                        <div class="card-inside">
+                            <div class="container contaioner-card-group-static">
+                                <div class="row ccard-group-main-static">
+                                    <div class="card-main col-12">
+                                        <div class="row card-group-topics">
+                                            <div class="card-img-topics col-4">
+                                                <img class="mw-100" src="https://cdn-images-1.medium.com/focal/200/200/50/55/1*efGguWRt7qh-jDVKjFPTNQ.jpeg" alt="">
+                                            </div>
+                                            <div class="card-content-topics col-8 ">
+                                                <p class="card-title-topics">Is It Possible to Hack Into a Spacesuit?</p>
+                                                <p class="card-autor-topics">Wes O´Donnell in OneZero</p>
+                                                <p class="card-create-topics">Oct 4 - 5 min read</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-main col-12 col-lg-4 d-none d-lg-block">
-                    <p>mundo</p>
+                <div class="card-main col-12 col-lg-3 mt-4 d-none d-lg-block">
+                    <div class="mb-3 card-img-principal"><img src="https://cdn-images-1.medium.com/focal/1008/444/63/28/1*Nj3OZx5JyCTHNhKVDTWOdQ.jpeg" alt="" class="card-img-top"></div>
+                    <div class="card-body-principal">
+                        <p class="card-title-principal-2 mt-2">The Complain Brag Is Even Worse</p>
+                        <p class="card-summary-principal">It’s annoying, but women in particular may have a hard time breaking the habit</p>
+                        <p class="card-autor-principal">Lauren Larson in Forge</p>
+                        <p class="card-create-pricipal">Oct 12 - 5 min read</p>
+                    </div>     
                 </div>
             </div>
         </div>
@@ -113,27 +178,42 @@
         <!--START nav see all-->
         <div class="container">
             <div class="row">
-                <div class="col 12 d-flex justify-content-end my-3">
-                    <p id="button-see-all"><a href="https://medium.com/topic/editors-picks"></a>VER TODOS ></p>
+                <div class="col 12 d-flex justify-content-end mt-3 mb-0">
+                    <p id="button-see-all"><a href="https://medium.com/topic/editors-picks"></a>SEE ALL FEUTURED ›</p>
                 </div>
             </div>
         </div>
+        <hr class="line-bottom m-0 p-0 my-2">
         <!--END nav see all-->
         
         <!--START subscriber-->
-        <div class="container container-subscriber">
-            <div class="row">
-                <div class="col-12">
+        <div class="container ">
+            <div class="container-subscriber mb-3 m-0 p-0">
+                <div class="row m-0 p-0">
+                    <div class="col-md-3 col-12 m-0 p-0">
+                    <img class="justify-content-start card-img-subscriber mw-100" src="https://cdn-images-1.medium.com/max/800/1*b3nQCtGsY2BWPFO_sUVRrg.png" alt="...">
+                    <img class="justify-content-start card-img-subscriber-small mw-100" src="https://cdn-images-1.medium.com/max/375/1*tU-oRhmSFYhT1ssvkv40hA.png" alt="...">
+                    </div>
+                    <div class="col-md-9 col-12 card-content-subscriber">
+                    <div class="card-body">
+                        <h5 class="card-title-subscriber">Never miss a story</h5>
+                        <p class="card-text-subscriber my-3">Sign up for Medium’s Daily Digest and get the best of Medium, tailored for you.</p>
+                        <form class="form-inline mt-3">
+                            <input class="mr-sm-5 text-style-subscriber" type="Email Address" placeholder="Email Address" aria-label="Email Address">
+                            <button class="btn btn-dark my-2 my-sm-0 button-style-subscriber" type="submit">Sing up</button>
+                        </form>
+                    </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </div>       
         <!--END subscriber-->
 
         <!--START static content-->
         <div class="container">
             <div class="row">
                 <div class="container-article-static col-lg-8">
-
+                    
                 </div>
                 <div class="container-popular-static col-lg-4">
 
@@ -155,7 +235,7 @@
             </div>
         <!--END dynamic content-->
 
-    </div>
+        </div>
 
  
 
